[package]
name = "maglev"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
hcl-rs = "0.19.7"
rcgen = "0.14.7"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
time = "0.3"
ureq = { version = "3", features = ["json"] }
