[package]
name = "maglev"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
hcl-rs = "0.19.7"
rcgen = "0.14.7"
rsa = { version = "0.9.10", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
time = "0.3"
ureq = { version = "3", features = ["json"] }
